--- a/assets/scss/5-modules/_page-title.scss
+++ b/assets/scss/5-modules/_page-title.scss
@@ -1,6 +1,9 @@
 .h3-title {
     font: 500 48px $barlow;
 }
+.h5-title{
+    font-size: 28px;
+}
 .section-v1-content {
     padding-bottom: 80px;
 
@@ -79,3 +82,4 @@
         font-size: 32px;
     }
 }
+
