--- a/assets/scss/4-components/_buttons.scss
+++ b/assets/scss/4-components/_buttons.scss
@@ -14,6 +14,14 @@
     &:hover{
         background-color: rgba($color: $primary, $alpha: .6);
     }
+    &.white{
+        background-color: $white;
+        color: $primary;
+        &:hover{
+            background-color: rgba($color: $white, $alpha: 0.8);
+        }
+    }
+  
     i {
         font-size: 18px;
     }
