--- a/assets/scss/6-pages/_project-detail.scss
+++ b/assets/scss/6-pages/_project-detail.scss
@@ -312,3 +312,82 @@
         transform: translateY(-50%);
     }
 }
+
+.plain-pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    .swiper-pagination-bullet{
+        min-width: 18px;
+        min-height: 18px;
+        border: solid 2px $white;
+        background: none;
+        &.swiper-pagination-bullet-active {
+            background-color: $white;
+        }
+    }
+}
+
+.project-location-map{
+    width: 100%;
+    height: 400px;
+}
+.newAndSaleProjectsSwiper{
+    .swiper-slide{
+        img{
+            width: 100%;
+            height: 490px;
+            object-fit: cover;
+            display: block;
+        }
+        
+    } 
+}
+.newSalesProjectContent{
+    padding: 50px 60px 0 50px;
+    background-color: $primary;
+    color: $white;
+    @include media-down("lg"){
+        padding-bottom: 40px;
+    }
+    @include media-down("sm"){
+        padding: 30px;
+    }
+    .title{
+        font-size: 28px;
+        font-weight: 600px;
+        margin-bottom: 30px;
+    }
+    p{
+        font-size: 18px 400;
+        height: 155px;
+        @include media-down("sm"){
+            height: 170px;
+            padding-bottom: 20px;
+            margin-bottom: 10px;
+            overflow: auto;
+        }
+    }
+    .features{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 50px;
+        li{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            font: 600 24px $barlow;
+            i{
+                font-size: 40px;
+            }
+        }
+        @include media-down("sm"){
+            li{
+                font-size: 20px;
+                i{
+                    font-size: 26px;
+                }
+            }
+        }
+    }
+}
