--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3267,6 +3267,12 @@ footer .socials a:hover {
   padding: 0 60px;
 }
 
+.project-detail-content-container-v2 {
+  margin: auto;
+  max-width: 1444px;
+  padding: 0 20px;
+}
+
 .project-detail-galery {
   display: flex;
   flex-wrap: wrap;
@@ -3350,12 +3356,22 @@ footer .socials a:hover {
   height: 400px;
 }
 
+@media (max-width: 991px) {
+  .newAndSaleProjectsSwiper .row {
+    flex-direction: column-reverse;
+  }
+}
 .newAndSaleProjectsSwiper .swiper-slide img {
   width: 100%;
   height: 490px;
   -o-object-fit: cover;
      object-fit: cover;
   display: block;
+}
+@media (max-width: 991px) {
+  .newAndSaleProjectsSwiper .swiper-slide img {
+    height: 300px;
+  }
 }
 
 .newSalesProjectContent {
@@ -3384,10 +3400,15 @@ footer .socials a:hover {
 }
 @media (max-width: 575px) {
   .newSalesProjectContent p {
-    height: 170px;
+    height: 200px;
     padding-bottom: 20px;
     margin-bottom: 10px;
     overflow: auto;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .newSalesProjectContent p {
+    height: 180px;
   }
 }
 .newSalesProjectContent .features {
@@ -3404,12 +3425,24 @@ footer .socials a:hover {
 .newSalesProjectContent .features li i {
   font-size: 40px;
 }
-@media (max-width: 575px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   .newSalesProjectContent .features li {
     font-size: 20px;
   }
   .newSalesProjectContent .features li i {
-    font-size: 26px;
+    font-size: 25px;
+  }
+}
+@media (max-width: 575px) {
+  .newSalesProjectContent .features {
+    margin-top: 20px;
+  }
+  .newSalesProjectContent .features li {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .newSalesProjectContent .features li i {
+    font-size: 30px;
   }
 }
 
