--- a/assets/scss/6-pages/_projects.scss
+++ b/assets/scss/6-pages/_projects.scss
@@ -9,6 +9,9 @@
         width: 190px;
         height: 190px;
         object-fit: cover;
+        @include media-down("sm"){
+            height: 90px;
+        }
     }
 }
 .project-preview-v1 {
