--- a/assets/scss/5-modules/_page-title.scss
+++ b/assets/scss/5-modules/_page-title.scss
@@ -1,12 +1,16 @@
 .h3-title {
     font: 500 48px $barlow;
 }
-.h5-title{
+.h5-title {
     font-size: 28px;
 }
 .section-v1-content {
     padding-bottom: 80px;
-
+    &.tarihce-content {
+        @include media-down("lg") {
+            padding: 40px 0 0 0;
+        }
+    }
     &.about-page {
         padding-left: 220px;
         padding-top: 60px;
@@ -17,6 +21,9 @@
     }
     &.owner {
         padding-top: 0;
+        @include media-down("lg") {
+            padding: 20px;
+        }
     }
     &.white {
         color: white;
@@ -49,7 +56,7 @@
 
 .section-v2-content {
     padding: 40px;
-    &.white{
+    &.white {
         color: $white;
     }
     .sub-title {
@@ -72,14 +79,14 @@
     }
 }
 
-.primary-title{
+.primary-title {
     font: 600 18px $barlow;
     display: flex;
     align-items: center;
     gap: 8px;
     color: $primary;
-    i{
+    padding: 0 20px;
+    i {
         font-size: 32px;
     }
 }
-
