--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2152,6 +2152,7 @@ footer .socials a:hover {
   position: absolute;
   left: 40%;
   top: 52%;
+  z-index: 1;
   transform: translate(-50%, -50%);
   transition: 0.5s;
   -webkit-animation-duration: 3s;
