--- a/assets/scss/6-pages/_index.scss
+++ b/assets/scss/6-pages/_index.scss
@@ -310,6 +310,7 @@
         position: absolute;
         left: 40%;
         top: 52%;
+        z-index: 1;
         transform: translate(-50%, -50%);
         transition: $transition;
         animation-duration: 3s;
