--- a/assets/scss/6-pages/_blog-detail.scss
+++ b/assets/scss/6-pages/_blog-detail.scss
@@ -42,6 +42,9 @@
         }
         @include media-down("lg"){
             padding: 0 15px;
+            p{
+                font-size: 18px;
+            }
         }
     }
 }
