--- a/assets/scss/6-pages/_project-detail.scss
+++ b/assets/scss/6-pages/_project-detail.scss
@@ -79,6 +79,10 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            @include media-down("sm"){
+                justify-content: center;
+                column-gap: 20px;
+            }
             li {
                 display: flex;
                 align-items: center;
