--- a/assets/scss/6-pages/_project-detail.scss
+++ b/assets/scss/6-pages/_project-detail.scss
@@ -33,7 +33,7 @@
         width: 100%;
         text-align: center;
         .title {
-            font: 300 136px $barlow;
+            font: 300 136px "times new roman";
             color: $white;
             letter-spacing: 20px;
         }
@@ -171,6 +171,9 @@
     .project-detail-hero {
         .content {
             top: 27%;
+            .title{
+                font-size: 60px;
+            }
             .icons-container {
                 li {
                     font-size: 24px;
@@ -190,8 +193,9 @@
         .content {
             top: 23%;
             .title {
-                font-size: 50px;
+                font-size: 40px;
                 font-weight: 500;
+                letter-spacing: 10px;
             }
             .icons-container {
                 padding: 0 20px;
