--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3417,6 +3417,11 @@ footer .socials a:hover {
     height: 300px;
   }
 }
+@media (max-width: 575px) {
+  .newAndSaleProjectsSwiper .swiper-slide img {
+    height: 200px;
+  }
+}
 
 .newSalesProjectContent {
   padding: 50px 60px 0 50px;
@@ -3438,13 +3443,18 @@ footer .socials a:hover {
   font-weight: 600px;
   margin-bottom: 30px;
 }
+@media (max-width: 575px) {
+  .newSalesProjectContent .title {
+    margin-bottom: 10px;
+  }
+}
 .newSalesProjectContent p {
   font-size: 18px 400;
   height: 155px;
 }
 @media (max-width: 575px) {
   .newSalesProjectContent p {
-    height: 200px;
+    height: 100px;
     padding-bottom: 20px;
     margin-bottom: 10px;
     overflow: auto;
@@ -3480,13 +3490,15 @@ footer .socials a:hover {
 @media (max-width: 575px) {
   .newSalesProjectContent .features {
     margin-top: 20px;
+    margin-bottom: 20px;
   }
   .newSalesProjectContent .features li {
     flex-wrap: wrap;
     justify-content: center;
+    font-size: 20px;
   }
   .newSalesProjectContent .features li i {
-    font-size: 30px;
+    font-size: 22px;
   }
 }
 
