--- a/assets/scss/6-pages/_project-detail.scss
+++ b/assets/scss/6-pages/_project-detail.scss
@@ -360,6 +360,9 @@
             @include media-down("lg"){
                 height: 300px;
             }
+            @include media-down("sm"){
+                height: 200px;
+            }
         }
     }
 }
@@ -377,12 +380,15 @@
         font-size: 28px;
         font-weight: 600px;
         margin-bottom: 30px;
+        @include media-down("sm"){
+            margin-bottom: 10px;
+        }
     }
     p {
         font-size: 18px 400;
         height: 155px;
         @include media-down("sm") {
-            height: 200px;
+            height: 100px;
             padding-bottom: 20px;
             margin-bottom: 10px;
             overflow: auto;
@@ -412,11 +418,13 @@
         }
         @include media-down("sm") {
             margin-top: 20px;
+            margin-bottom: 20px;
             li {
                 flex-wrap: wrap;
                 justify-content: center;
+                font-size: 20px;
                 i {
-                    font-size: 30px;
+                    font-size: 22px;
                 }
             }
         }
