--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1519,6 +1519,11 @@ footer .socials a:hover {
   right: 16px;
   font-size: 24px;
 }
+@media (max-width: 575px) {
+  .btn-primary.min-w-100 {
+    width: 100%;
+  }
+}
 
 .btn-blur {
   display: inline-flex;
