--- a/assets/scss/4-components/_buttons.scss
+++ b/assets/scss/4-components/_buttons.scss
@@ -11,26 +11,31 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     transition: $transition;
     cursor: pointer;
-    &:hover{
-        background-color: rgba($color: $primary, $alpha: .6);
+    &:hover {
+        background-color: rgba($color: $primary, $alpha: 0.6);
     }
-    &.white{
+    &.white {
         background-color: $white;
         color: $primary;
-        &:hover{
+        &:hover {
             background-color: rgba($color: $white, $alpha: 0.8);
         }
     }
-  
+
     i {
         font-size: 18px;
     }
-    &.position-icon{
+    &.position-icon {
         position: relative;
-        i{
+        i {
             position: absolute;
             right: 16px;
             font-size: 24px;
+        }
+    }
+    @include media-down("sm") {
+        &.min-w-100 {
+            width:100%;
         }
     }
 }
@@ -71,11 +76,11 @@
     &:hover {
         background-color: rgba($color: $white, $alpha: 0.4);
     }
-    &.primary{
+    &.primary {
         border-color: $primary;
         background-color: $white;
         color: $primary;
-        &:hover{
+        &:hover {
             background-color: $primary;
             color: $white;
         }
@@ -112,7 +117,7 @@
     gap: 14px;
     color: $primary;
     transition: $transition;
-    i{
+    i {
         font-size: 20px;
     }
     &:hover {
