--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1822,6 +1822,79 @@ footer .socials a:hover {
   color: #D98563;
 }
 
+.video-hero-section video {
+  position: absolute;
+  left: 0;
+  right: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.index-video-section {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+.index-video-section::before {
+  content: "";
+  background: rgb(0, 0, 0);
+  background: linear-gradient(18deg, rgba(0, 0, 0, 0.7) 40%, rgba(0, 0, 0, 0) 100%);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+}
+.index-video-section .content {
+  transition: 2s;
+  position: relative;
+}
+@media (max-width: 991px) {
+  .index-video-section .content {
+    padding-left: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .index-video-section .content {
+    width: auto;
+  }
+}
+@media (max-height: 500px) {
+  .index-video-section .content {
+    padding-top: 120px;
+  }
+}
+.index-video-section .content .title {
+  font: 300 80px "barlow";
+  color: #ffffff;
+  margin-bottom: 18px;
+}
+@media (max-width: 991px) {
+  .index-video-section .content .title {
+    font-size: 60px;
+  }
+}
+@media (max-width: 575px) {
+  .index-video-section .content .title {
+    font-size: 40px;
+  }
+}
+.index-video-section .content p {
+  color: #ffffff;
+  margin-bottom: 50px;
+}
+.index-video-section .redirect {
+  margin-top: 26px;
+  display: flex;
+  gap: 12px;
+}
+
 .index-hero-section {
   height: 100vh;
   position: relative;
