--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -1,4 +1,23 @@
 
+
+@font-face {
+    font-family: $montserrat;
+    src: url(../fonts/Montserrat-Regular.ttf) format("TrueType");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: $montserrat;
+    src: url(../fonts/Montserrat-Medium.ttf) format("TrueType");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: $montserrat;
+    src: url(../fonts/Montserrat-SemiBold.ttf) format("TrueType");
+    font-weight: 600;
+}
+
 @font-face {
     font-family: $barlow;
     src: url(../fonts/BarlowCondensed-Light.ttf) format("TrueType");
