--- a/assets/scss/6-pages/_index.scss
+++ b/assets/scss/6-pages/_index.scss
@@ -7,6 +7,14 @@
         width: 100%;
         height: 100%;
     }
+    .preview {
+        position: absolute;
+        left: 0;
+        right: 0;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
 }
 .index-video-section {
     height: 100vh;
